use the real nativefier project, not my fork, now that my bookmarks menu PR is merged

--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   },
   "homepage": "https://github.com/cdzombak/lofiapp#readme",
   "dependencies": {
-    "nativefier": "github:cdzombak/nativefier#cdz/add-predefined-bookmarks-menu"
+    "nativefier": "github:nativefier/nativefier#master"
   }
 }
