--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lofiapp",
-  "version": "1.1.5",
+  "version": "1.1.8",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cdzombak/lofiapp.git"
@@ -12,6 +12,6 @@
   },
   "homepage": "https://github.com/cdzombak/lofiapp#readme",
   "dependencies": {
-    "nativefier": ">=50.0.1"
+    "nativefier": "^52.0.0"
   }
 }
